@@ -261,6 +261,25 @@ public:
       // do nothing
    }
 
+   /**
+    * Invokes the global scope delete operator.  This is required for proper
+    * releasing of memory in DLLs on Win32.
+    */
+   void operator delete(void* p)
+   {
+      ::operator delete(p);
+   }
+
+protected:
+   /**
+    * Deletes this object.  This is an implementation of the pure virtual
+    * snx::ISoundImplementation::destroy() method.
+    */
+   virtual void destroy()
+   {
+      delete this;
+   }
+
 private:  
 
    /** @link dependency */
